--- a/app/src/main/res/layout/fragment_cheque.xml
+++ b/app/src/main/res/layout/fragment_cheque.xml
@@ -2,45 +2,181 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.inlanet.cateoncook.Fragments.ChequeFragment">
+    tools:context="net.inlanet.cateoncook.Fragments.ChequeFragment"
+    android:background="@drawable/fondo_financiemientos">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- TODO: -->
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Pago en Cheque" />
-
-    <GridLayout
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:rowCount="2"
-        android:columnCount="2"
-        android:layout_gravity="center"
-        android:useDefaultMargins="true">
+        android:padding="25dp">
 
-        <ImageButton
-            android:id="@+id/btnTarjetaOEfectivo"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:background="@drawable/checklist" />
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spnrNumeroCheques"
+            android:layout_weight="1" />
 
-        <ImageButton
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:id="@+id/imageButton3"
-            android:background="@drawable/credit_card" />
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:columnCount="2"
+            android:rowCount="1"
+            android:useDefaultMargins="true">
 
-        <ImageButton
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:id="@+id/imageButton4"
-            android:background="@drawable/get_money" />
+            <TextView
+                android:text="Monto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" />
 
-        <ImageButton
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:id="@+id/imageButton5"
-            android:background="@drawable/money" />
-    </GridLayout>
+            <TextView
+                android:text="US$"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvMonto"
+                android:layout_gravity="right|center_vertical" />
+
+        </GridLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:columnCount="2"
+            android:rowCount="1"
+            android:useDefaultMargins="true">
+
+            <TextView
+                android:text="40% de entrada"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" />
+
+            <TextView
+                android:text="US$"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvEntrada"
+                android:layout_gravity="right|center_vertical" />
+
+        </GridLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:columnCount="2"
+            android:rowCount="1"
+            android:useDefaultMargins="true">
+
+            <TextView
+                android:text="Saldo restante"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:text="US$"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvSaldoRestante"
+                android:layout_gravity="right|center_vertical" />
+
+        </GridLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:columnCount="2"
+            android:rowCount="1"
+            android:useDefaultMargins="true">
+
+            <TextView
+                android:text="Intereses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:text="US$"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvInteres"
+                android:layout_gravity="right|center_vertical" />
+
+        </GridLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:columnCount="2"
+            android:rowCount="1"
+            android:useDefaultMargins="true">
+
+            <TextView
+                android:text="Total a pagar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:text="US$"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvTotalPagar"
+                android:layout_gravity="right|center_vertical" />
+
+        </GridLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:columnCount="2"
+            android:rowCount="1"
+            android:useDefaultMargins="true">
+
+            <TextView
+                android:text="# Cheques de"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/tvNumeroCheques" />
+
+            <TextView
+                android:text="US$"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvMontoCheque"
+                android:layout_gravity="right|center_vertical" />
+
+        </GridLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:columnCount="2"
+            android:rowCount="1"
+            android:useDefaultMargins="true">
+
+            <TextView
+                android:text="Con factor al: 0.00%"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvPorcentajeInteres"
+                android:layout_columnSpan="2"
+                android:layout_gravity="center_vertical" />
+
+        </GridLayout>
+
+
+
+    </LinearLayout>
 
 </FrameLayout>
