--- a/app/src/main/res/layout/fragment_financiamiento_item_list.xml
+++ b/app/src/main/res/layout/fragment_financiamiento_item_list.xml
@@ -8,18 +8,25 @@
         android:id="@+id/tvNroCuotas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin" />
+        android:layout_margin="@dimen/text_margin"
+        android:textSize="18sp"
+        android:textStyle="normal|bold"
+        android:textColor="@color/colorPrimaryDark" />
 
     <TextView
         android:id="@+id/tvTexto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin" />
+        android:layout_margin="@dimen/text_margin"
+        android:textSize="18sp"
+        android:textColor="@color/colorPrimaryDark" />
 
     <TextView
         android:id="@+id/tvMonto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin" />
+        android:layout_margin="@dimen/text_margin"
+        android:textSize="18sp"
+        android:textColor="@color/colorPrimaryDark" />
 
 </LinearLayout>
