--- a/app/src/main/res/layout/fragment_productos.xml
+++ b/app/src/main/res/layout/fragment_productos.xml
@@ -2,39 +2,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.inlanet.cateoncook.Fragments.ProductsFragment">
+    tools:context="net.inlanet.cateoncook.Fragments.ProductsFragment"
+    android:id="@+id/fragment_mainLayout">
 
-    <!-- TODO: ReciclerView para mostrar los Productos -->
+    <!-- TODO: ReciclerView para mostrar los Producto -->
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/tvTitle"
-            android:text="Productos"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textStyle="normal|bold"
-            android:textSize="24dp"
-            android:gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/tvDescription"
-            android:text="Seleccione un producto para realizar una venta"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="16dp"
-            android:gravity="center_horizontal"
-            android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/rvProductos"
             android:paddingBottom="@dimen/activity_vertical_margin" />
+
     </LinearLayout>
 
 </FrameLayout>
