--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,9 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">5dp</dimen>
-    <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="fragment_horizontal_spacing">5dp</dimen>
 
+    <dimen name="width_imagen">100dp</dimen>
+    <dimen name="height_imagen">71dp</dimen>
+    <dimen name="height_toolbar">48dp</dimen>
+    <dimen name="text_size">14sp</dimen>
     <dimen name="badge_text_size">8sp</dimen>
     <dimen name="item_space">8dp</dimen>
     <dimen name="text_margin">16dp</dimen>
