--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,28 @@
 <resources>
 
     <!-- Base application theme. -->
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@drawable/fondo_splash</item>
+    </style>
+
+    <!-- Base application theme. -->
     <style name="BaseAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
-        <item name="actionBarTabStyle">@color/accent</item>
+        <item name="actionBarTabStyle">@color/colorAccent</item>
         <item name="buttonStyle">@style/ButtonColor</item>
-
+        <item name="android:textColor">@color/primary_dark</item>
+        <item name="android:textSize">@dimen/text_size</item>
     </style>
 
     <!-- declare the theme name that's actually applied in the manifest file -->
     <style name="AppTheme" parent="BaseAppTheme" />
 
     <style name="ButtonColor" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:textColor">@color/primary_dark</item>
+        <item name="android:textColor">@color/primary_light</item>
         <item name="colorButtonNormal">@color/primary_dark</item>
     </style>
 
