--- a/app/src/main/res/layout/fragment_financiamiento.xml
+++ b/app/src/main/res/layout/fragment_financiamiento.xml
@@ -3,34 +3,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="net.inlanet.cateoncook.Fragments.FinanciamientoFragment"
-    android:background="@drawable/fondo_financiemientos">
+    android:id="@+id/fragment_financiamiento_root">
+
+    <ImageView
+        android:id="@+id/ivMain"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        tools:ignore="ContentDescription" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
-            android:text="Seleccione el carro de compra"
+            android:id="@+id/tvMontoTotal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvMontoTotal"
-            android:textSize="24sp"
+            android:text="Seleccione el carro de compra"
             android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp" />
 
-        <android.support.v7.widget.RecyclerView
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/rvFinanciamientos"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             app:layoutManager="LinearLayoutManager"
             tools:context="net.inlanet.cateoncook.Fragments.FinanciamientoFragment"
-            tools:listitem="@layout/fragment_financiamiento_item_list"
-            android:layout_gravity="center" />
-
+            tools:listitem="@layout/fragment_financiamiento_item_list" />
 
     </LinearLayout>
 </FrameLayout>
