--- a/app/src/main/res/layout/activity_catalogo.xml
+++ b/app/src/main/res/layout/activity_catalogo.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="net.inlanet.cateoncook.Activities.CatalogoActivity">
+    tools:context="net.inlanet.cateoncookv12.Activities.CatalogoActivity">
 
 
 </RelativeLayout>
