--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="net.inlanet.cateoncook.Activities.MainActivity">
+    tools:context="net.inlanet.cateoncookv12.Activities.net.inlanet.cateoncook.Activities.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBar"
