--- a/app/src/main/res/layout/fragment_forma_pago.xml
+++ b/app/src/main/res/layout/fragment_forma_pago.xml
@@ -23,7 +23,8 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:paddingBottom="@dimen/activity_vertical_margin">
 
                 <Spinner
                     android:layout_width="match_parent"
@@ -50,7 +51,8 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:paddingTop="@dimen/activity_vertical_margin">
 
                 <TextView
                     android:layout_width="wrap_content"
