--- a/app/src/main/res/layout/fragment_productos.xml
+++ b/app/src/main/res/layout/fragment_productos.xml
@@ -2,19 +2,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/cardview_light_background"
     tools:context="net.inlanet.cateoncook.Fragments.ProductsFragment"
     android:id="@+id/fragment_mainLayout">
 
-    <!-- TODO: ReciclerView para mostrar los Producto -->
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/tvSearchMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="No se han encontrado resultados"
+            android:textSize="28sp"
+            android:visibility="gone" />
+
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvProductos"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/rvProductos"
             android:paddingBottom="@dimen/activity_vertical_margin" />
 
     </LinearLayout>
