--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_search"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="Buscar productos"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always" /> <!--app:showAsAction="ifRoom|collapseActionView"-->
+
+    <item
         android:id="@+id/action_notifications"
         android:icon="@drawable/badge_circle"
         android:title="@string/notificacion"
